--- a/AnonU/app/src/main/res/layout/activity_schools.xml
+++ b/AnonU/app/src/main/res/layout/activity_schools.xml
@@ -45,8 +45,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn7"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn7"
@@ -55,8 +54,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn6"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn6"
@@ -65,8 +63,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn5"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn5"
@@ -75,8 +72,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn4"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn4"
@@ -85,8 +81,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn3"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn3"
@@ -95,8 +90,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn2"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn1"
@@ -105,8 +99,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
     <Button
         android:id="@+id/btn2"
@@ -115,7 +108,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btn1"
-        android:background="@android:color/transparent"
-        android:text="Button" />
+        android:background="@android:color/transparent" />
 
 </RelativeLayout>
