--- a/AnonU/app/src/main/res/layout/activity_dynamic.xml
+++ b/AnonU/app/src/main/res/layout/activity_dynamic.xml
@@ -1,84 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/activity_main"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="appathon.anonu.DynamicActivity">
-
-<Button
-    android:text="Home"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:id="@+id/homeButtonID"
-    android:backgroundTint="@android:color/darker_gray" />
-
-<Button
-    android:text="History"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignTop="@+id/homeButtonID"
-    android:layout_centerHorizontal="true"
-    android:id="@+id/HistoryButtonID" />
-
-<Button
-    android:text="Schools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/SchoolsID"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-    android:elevation="0dp" />
-
-<Button
-    android:text="Post!"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/PostButtonID"
-    android:layout_alignTop="@+id/NewPostID"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-    android:layout_alignBottom="@+id/NewPostID" />
-
-<ListView
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/listViewID"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/UserNewPostID"
-    android:divider="@android:drawable/bottom_bar"
-    android:dividerHeight="4dp"
-    android:layout_above="@+id/homeButtonID" />
+    android:background="@color/wallet_bright_foreground_holo_dark"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="appathon.anonu.DynamicActivity">
 
-<TextView
-    android:text="What's good??"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/TitleID"
-    android:textSize="30sp"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true" />
+    <Button
+        android:id="@+id/homeButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:text="Home" />
 
-<EditText
-    android:id="@+id/UserNewPostID"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/PostButtonID"
-    android:layout_marginTop="19dp"
-    android:editable="false"
-    android:ems="10"
-    android:inputType="textMultiLine" />
+    <Button
+        android:id="@+id/HistoryButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/listViewID"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="History" />
+
+    <Button
+        android:id="@+id/SchoolsID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:elevation="0dp"
+        android:text="Schools" />
+
+    <Button
+        android:id="@+id/PostButtonID"
+        style="@android:style/Widget.Holo.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/NewPostID"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/NewPostID"
+        android:background="@android:color/holo_blue_dark"
+        android:text="Post!" />
+
+    <ListView
+        android:id="@+id/listViewID"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/homeButtonID"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/UserNewPostID"
+        android:divider="@android:color/holo_blue_dark"
+        android:dividerHeight="2dp" />
+
+    <TextView
+        android:id="@+id/TitleID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:textSize="30sp" />
+
+    <EditText
+        android:id="@+id/UserNewPostID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/PostButtonID"
+        android:layout_marginTop="19dp"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="textMultiLine" />
+
+    <TextView
+        android:id="@+id/textViewID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/UserNewPostID"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/PostButtonID"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
 
 </RelativeLayout>
