--- a/AnonU/app/src/main/res/layout/activity_history.xml
+++ b/AnonU/app/src/main/res/layout/activity_history.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wallet_bright_foreground_holo_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,32 +12,34 @@
     tools:context="appathon.anonu.HistoryActivity">
 
     <Button
-        android:text="History"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/HistoryButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignTop="@+id/homeButtonID"
         android:layout_centerHorizontal="true"
-        android:id="@+id/HistoryButtonID"
-        android:backgroundTint="@android:color/darker_gray" />
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:text="History" />
 
     <Button
-        android:text="Schools"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/SchoolsID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:elevation="0dp" />
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:elevation="0dp"
+        android:text="Schools" />
 
     <Button
-        android:text="Home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/homeButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Home" />
 
     <ListView
         android:id="@+id/historyListview"
@@ -46,7 +49,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:divider="@android:drawable/bottom_bar"
-        android:dividerHeight="4dp" />
+        android:divider="@android:color/holo_blue_dark"
+        android:dividerHeight="2dp" />
 
 </RelativeLayout>
