--- a/AnonU/app/src/main/res/layout/activity_login.xml
+++ b/AnonU/app/src/main/res/layout/activity_login.xml
@@ -1,28 +1,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:layout_width="match_parent">
+    android:background="@color/wallet_bright_foreground_holo_dark"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
-        android:text="Email:"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/email" />
+        android:layout_marginTop="250dp"
+        android:text="Email:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <EditText
+        android:id="@+id/enterEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:layout_marginTop="10dp"
-        android:id="@+id/enterEmail" />
+        android:inputType="textEmailAddress" />
 
     <Button
-        android:text="Login"
+        android:id="@+id/loginButton"
+        style="@android:style/Widget.Holo.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/email"
-        android:layout_marginTop="123dp"
-        android:id="@+id/loginButton" />
+        android:layout_marginTop="20dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="Login" />
 </LinearLayout>
