--- a/AnonU/app/src/main/res/layout/activity_main.xml
+++ b/AnonU/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wallet_bright_foreground_holo_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,63 +12,66 @@
     tools:context="appathon.anonu.MainActivity">
 
     <Button
-        android:text="Home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/homeButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/homeButtonID"
-        android:backgroundTint="@android:color/darker_gray" />
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:text="Home" />
 
     <Button
-        android:text="History"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/HistoryButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignTop="@+id/homeButtonID"
         android:layout_centerHorizontal="true"
-        android:id="@+id/HistoryButtonID" />
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="History" />
 
     <Button
-        android:text="Schools"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/SchoolsID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:elevation="0dp" />
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:elevation="0dp"
+        android:text="Schools" />
 
     <Button
-        android:text="Post!"
+        android:id="@+id/PostButtonID"
+        style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/PostButtonID"
-        android:layout_alignTop="@+id/NewPostID"
-        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/NewPostID"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/NewPostID" />
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/NewPostID"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:text="Post!" />
 
     <ListView
+        android:id="@+id/listViewID"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewID"
+        android:layout_above="@+id/homeButtonID"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/UserNewPostID"
-        android:divider="@android:drawable/bottom_bar"
-        android:dividerHeight="4dp"
-        android:layout_above="@+id/homeButtonID" />
+        android:divider="@android:color/holo_blue_dark"
+        android:dividerHeight="2dp" />
 
     <TextView
-        android:text="What's good??"
+        android:id="@+id/TitleID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/TitleID"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/UserNewPostID"
@@ -80,5 +84,17 @@
         android:editable="false"
         android:ems="10"
         android:inputType="textMultiLine" />
+
+    <TextView
+        android:id="@+id/textViewID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/UserNewPostID"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/PostButtonID"
+        android:layout_toStartOf="@+id/PostButtonID"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
 </RelativeLayout>
