--- a/AnonU/app/src/main/res/layout/activity_schools.xml
+++ b/AnonU/app/src/main/res/layout/activity_schools.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_schools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wallet_bright_foreground_holo_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,32 +12,35 @@
     tools:context="appathon.anonu.SchoolsActivity">
 
     <Button
-        android:text="Home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/homeButtonID"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/homeButtonID" />
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="Home" />
 
     <Button
-        android:text="History"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/HistoryButtonID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignTop="@+id/homeButtonID"
         android:layout_centerHorizontal="true"
-        android:id="@+id/HistoryButtonID" />
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="History" />
 
     <Button
-        android:text="Schools"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/SchoolsID"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@android:color/holo_blue_dark"
         android:elevation="0dp"
-        android:backgroundTint="@android:color/darker_gray" />
+        android:text="Schools" />
 
     <Button
         android:id="@+id/btn8"
